Bug 315771 - Last.fm paid content information should be changed
Summary: Last.fm paid content information should be changed
Status: RESOLVED FIXED
Alias: None
Product: amarok
Classification: Applications
Component: Services/Last.fm (other bugs)
Version First Reported In: 2.7.0
Platform: openSUSE Linux
: NOR normal
Target Milestone: 2.8
Assignee: Amarok Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-02-25 21:23 UTC by bjoernv
Modified: 2013-03-03 12:58 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.8
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description bjoernv 2013-02-25 21:23:50 UTC
I think, the message

#: services/lastfm/meta/LastFmMultiPlayableCapability.cpp:98 
msgid "" 
  "To listen to this stream you need to be a paying Last.fm subscriber. All the "
  "other Last.fm features are unaffected."

is not optimal. Last.fm says 

  "Any API account can only stream radio to Last.fm's paid subscribers."
  (source: http://www.lastfm.de/api/radio)

That means, that at least the second sentence is "All the other Last.fm features are unaffected." is misleading. Please change or remove this sentence.

Reproducible: Always
Comment 1 Matěj Laitl 2013-02-25 21:30:13 UTC
(In reply to comment #0)
> That means, that at least the second sentence is "All the other Last.fm
> features are unaffected." is misleading. Please change or remove this
> sentence.

I don't understand what exactly is misleading on that sentence. Please suggest your proposed wording to make this more clear.
Comment 2 bjoernv 2013-02-25 22:39:42 UTC
The problem is, that if you are an unauthenticated user or a Last.fm user without an paid subscription, then all Last.fm streams are unavailable for you in Amarok, because Amarok uses the Last.fm API and the Last.fm API is only for users with paid subscriptions (see Last.fm FAQ or citation above). But the second Amarok sentence "All the other Last.fm features are unaffected." lets you hope, that you can try other Last.fm streams in Amarok. So I would suggest to delete the second sentence. 

Personally I have a Last.fm user account without paid subscriptions. In my test all Last.fm streams are unavailable in Amarok. Other users (please search for the information message in a search engine) report the same. Last.fm changed the access to it's API some time ago. Probably the Amarok module and the information messages are older.

I am not sure, if there are configurations, where people with paid subscriptions have access to only some streams. In such an situation, other descriptions in Amarok can be displayed.

By the way, Amarok could give a hint in the Last.fm configuration dialog, that the Amarok Last.fm module is only useful for users with paid Last.fm subscriptions.
Comment 3 Myriam Schweingruber 2013-03-02 11:49:50 UTC
It doesn't say "other last.fm streamas, but features, like scrobbling,

And last.fm is useful to everybody, you can just not use the extended features (radio, streams), but you can scrobble, use the labels, sync the statistics, etc, no need to have a paid account for that.
Comment 4 bjoernv 2013-03-02 23:25:56 UTC
Could someone please confirm that features like scrobbling are available through the Last.fm in Amarok for free subscriptions?

If this works, I would still change 

"To listen to this stream you need to be a paying Last.fm subscriber. All the other Last.fm features are unaffected."

to something like

"To listen Last.fm streams you need to be a paying Last.fm subscriber. Other Last.fm features (scrobbling [...]) are unaffected." ([...] should be filled in)
Comment 5 Myriam Schweingruber 2013-03-02 23:39:59 UTC
(In reply to comment #4)
> Could someone please confirm that features like scrobbling are available
> through the Last.fm in Amarok for free subscriptions?

Erm, excuse me? Did you read what I jsut said? You can test that easily yourself if you don't believe me...

> If this works, I would still change 
> 
> "To listen to this stream you need to be a paying Last.fm subscriber. All
> the other Last.fm features are unaffected."
> 
> to something like
> 
> "To listen Last.fm streams you need to be a paying Last.fm subscriber. Other
> Last.fm features (scrobbling [...]) are unaffected." ([...] should be filled
> in)

Which is not necessary, as it says exactly what the other wording also says. "Other features != streams"
Comment 6 bjoernv 2013-03-03 09:33:22 UTC
Personally I do not want to use Last.fm as music spyware, I want to use it as something like Internet Radio. I will deactivate this plugin now, because it's useless for me without a paid subscription.

Why shouldn't we change "this stream" to "streams". Last.fm clearly says

"Any API account can only stream radio to Last.fm's paid subscribers." (source http://www.lastfm.de/api/radio)
Comment 7 Matěj Laitl 2013-03-03 11:18:29 UTC
(In reply to comment #6)
> Personally I do not want to use Last.fm as music spyware, I want to use it
> as something like Internet Radio. I will deactivate this plugin now, because
> it's useless for me without a paid subscription.

No need to tell your personal feeling on bugs. If you had actually checked the Last.fm plugin configuration, you would notice "Scrobble tracks" checkbox. Also your definition of "spyware" is rather off.

> Why shouldn't we change "this stream" to "streams".

Yeah, why not. If you stated this right away in the description you would save you and us plenty of time writing and reading elaborate essays.
Comment 8 Matěj Laitl 2013-03-03 12:58:05 UTC
Git commit fdd97a4cdf178c6695a5e41322e4fa72d1602001 by Matěj Laitl.
Committed on 03/03/2013 at 13:56.
Pushed by laitl into branch 'master'.

LastFmMultiPlayableCapability: better string on unavailable streams

BUGFIXES:
 * Clarify message when Last.fm streams are not available.
FIXED-IN: 2.8

M  +1    -0    ChangeLog
M  +7    -4    src/services/lastfm/meta/LastFmMultiPlayableCapability.cpp

http://commits.kde.org/amarok/fdd97a4cdf178c6695a5e41322e4fa72d1602001